cargo-features = ["per-package-target"]

[package]
name = "fortanix_test"
version = "0.1.0"
edition = "2021"
forced-target = "x86_64-fortanix-unknown-sgx"

[patch.crates-io]
mbedtls = { git = "https://github.com/fortanix/rust-mbedtls", branch = "raoul/tokio-1.15.0" }
mio = { git = "https://github.com/mzohreva/mio", branch = "mz/sgx-port-0.7.6" }
tokio = { git = "https://github.com/fortanix/tokio.git", branch = "raoul/tokio-1.33.0-sgx" }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple-hyper-client = "0.1.2"



